Fix z-index/pointer-events/transitions

--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -38,7 +38,7 @@ label {
 }
 
 a {
-  transition: $transition;
+  @include transition(color);
   color: $pewterBlue;
   &:visited { color: $blueSapphire; }
   &:hover { color: $rosyBrown; }
