--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -9,11 +9,12 @@ body > header {
   vertical-align: top;
   padding: $headerPadding 0;
   color: $white;
-  z-index: 1;
   a {
     color: $white;
     &:hover, &:active, &:visited { color: $white; }
     text-decoration: none;
+    @include transition(border);
+    &.active { border-bottom: 0.1em solid $white; }
   }
   > div.wrapper {
     display: flex;
@@ -25,7 +26,6 @@ body > header {
 }
 
 #site-logo, #menu-icon {
-  z-index: 101;
 }
 
 
@@ -39,6 +39,7 @@ body > header {
 
 
 @media #{$beforeFirstBreakpointStr} {
+  body.menu-open { position: fixed; }
   #menu-icon {
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -59,7 +60,8 @@ body > header {
       content: '';
       margin: (-0.5*$height) (-0.5*$width);
       left: 50%;
-      transition: $transition;
+      @include transition(transform);
+      @include transition(position);
       transform: rotate(0deg);
     }
     $fudge: 0.15em;
@@ -70,8 +72,9 @@ body > header {
       bottom: $headerPadding + $fudge;
     }
   }
-  #menu-checkbox:checked {
-    ~ #menu-icon {
+  #menu-checkbox:checked + header {
+    position: fixed;
+    #menu-icon {
       &:before {
         top: 50%;
         transform: rotate(45deg);
@@ -81,20 +84,19 @@ body > header {
         transform: rotate(-45deg);
       }
     }
-    ~ #main-menu-bg {
+    #main-menu-bg {
       opacity: 1;
     }
-    ~ #main-menu {
+    #main-menu {
       opacity: 1;
-      pointer-events: auto;
+      ul { pointer-events: auto; }
     }
   }
   #main-menu-bg {
-    transition: $transition;
+    @include transition(opacity);
     pointer-events: none;
     opacity: 0;
     position: fixed;
-    z-index: 100;
     overflow: hidden;
     top: 0;
     right: 0;
@@ -103,36 +105,42 @@ body > header {
     background-color: $rosyBrown;
   }
   #main-menu {
-    transition: $transition;
+    @include transition(opacity);
     pointer-events: none;
     opacity: 0;
     position: fixed;
-    z-index: 102;
     overflow: hidden;
-    top: $headerHeight+2*$headerPadding;
+    top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+    top: env(safe-area-inset-top);
+    right: env(safe-area-inset-right);
+    bottom: env(safe-area-inset-bottom);
+    left: env(safe-area-inset-left);
     .book-button {
       background-color: $white;
       color: $rosyBrown;
     }
     ul {
-      padding: 2em;
-      height: 100vh;
-      width: 100vw;
+      position: fixed;
+      top: $headerHeight+2*$headerPadding;
+      right: 0;
+      bottom: 0;
+      left: 0;
       margin: 0;
-      overflow: auto;
+      padding: 0;
+      overflow-y: auto;
       list-style-type: none;
       text-align: center;
-      box-sizing: border-box;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-start;
     }
     li {
       padding: 1em 0;
       font-size: 1.5em;
+      a { position: relative; }
     }
   }
 }
@@ -169,7 +177,6 @@ body > header {
     opacity: 1;
     #cliniko-3616999 {
       pointer-events: auto;
-      z-index: 300;
     }
   }
 }
@@ -177,14 +184,13 @@ body > header {
 #book-bg, #book-box {
   opacity: 0;
   pointer-events: none;
+  @include transition(opacity);
 }
 
 #book-bg {
   background-color: rgba(0,0,0,0.2);
   display: block;
-  transition: $transition;
   position: fixed;
-  z-index: 200;
   top: 0;
   right: 0;
   bottom: 0;
@@ -192,14 +198,11 @@ body > header {
 }
 
 #book-box {
-  transition: $transition;
   position: fixed;
-  z-index: 201;
   top: 2em;
-  right: 2em;
+  right: 1em;
   bottom: 2em;
-  left: 2em;
-  pointer-events: none;
+  left: 1em;
 }
 
 #book-wrapper {
@@ -208,11 +211,30 @@ body > header {
 }
 
 #cliniko-3616999 {
-  z-index: -1;
   position: relative;
   width: 100%;
   height: 100%;
   border: 0;
   outline: 0;
   pointer-events: none;
+}
+
+// Z-INDEX
+
+body > header {
+  z-index: 100;
+}
+
+#main-menu-bg {
+  z-index: -1;
+}
+#main-menu {
+  z-index: 1;
+}
+
+#book-checkbox:checked {
+  ~ #book-bg,
+  ~ #book-box {
+    z-index: 200;
+  }
 }
