--- a/assets/scss/sections.scss
+++ b/assets/scss/sections.scss
@@ -1,5 +1,4 @@
 main {
-  z-index: 2;
   background-color: $isabelline;
   position: relative;
 }
