--- a/assets/scss/text-box.scss
+++ b/assets/scss/text-box.scss
@@ -15,7 +15,6 @@ section.text-box {
       width: 43%;
       float: right;
       margin-top: $verticalPadding/2;
-      z-index: -1;
     }
   }
 
